# claude-impl-evo-non-associative-learning

./: .gitignore  CLAUDE.md  README.md  claude.md  coding_plan.md  habituation_paper.md  simulation_requirements.md
.claude/docs/: alice-experiment.md  alice-visualization.md  habituation-evolution.md  independent-env-analysis.md  shared-patterns.md
config/: default.yaml
habituation_evolution/: README.md  REPRODUCTION_PLAN.md  pyproject.toml
habituation_evolution/data/experiments/my_test/: config.json
habituation_evolution/data/experiments/quick_test/: config.json
habituation_evolution/data/experiments/quick_test/main/: result_clump10_acc60_life1000_run0.json  result_clump10_acc60_life1000_run1.json  result_clump1_acc60_life1000_run0.json  result_clump1_acc60_life1000_run1.json  result_clump1_acc75_life1000_run0.json  result_clump1_acc75_life1000_run1.json  result_clump1_acc90_life1000_run0.json  result_clump1_acc90_life1000_run1.json
habituation_evolution/scripts/: analyze_independent_results.py  analyze_results.py  run_experiment.py  run_independent_subset.py  threshold_analysis.py
habituation_evolution/src/habituation_evolution/: __init__.py  config.py  genetics.py  network.py  simulation.py
habituation_evolution/tests/: test_fitness.py  test_integration.py
habituation_experiment_ALICE/: pyproject.toml
habituation_experiment_ALICE/config/: continuous.yaml  ctrnn.yaml  ctrnn_continuous.yaml  default.yaml  delay2.yaml
habituation_experiment_ALICE/scripts/: gen_all_viz.py  hyperparam_sweep.py  hyperparam_sweep2.py  run_experiment.py  visualize.py
habituation_experiment_ALICE/src/habituation_experiment_alice/: __init__.py  config.py  environment.py  evaluation.py  genetics.py  health.py  io.py  network.py  selection.py  simulation.py
habituation_experiment_ALICE/src/habituation_experiment_alice/viz/: __init__.py  agent_trace_plots.py  analysis_plots.py  common.py  fitness_plots.py  genetics_plots.py
habituation_experiment_ALICE/tests/: test_config.py  test_environment.py  test_evaluation.py  test_genetics.py  test_health.py  test_network.py  test_selection.py  test_simulation.py
scripts/: __init__.py  reverse_engineer_threshold.py
src/habituation_evolution/: config.py  environment.py  fitness.py  genetics.py  network.py  simulation.py
tests/: __init__.py  test_environment.py  test_genetics.py  test_integration.py  test_network.py
